# codex-services

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  project_structure.txt  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
0.x/: 404.html  index.html  objects.inv
0.x/en/api/: index.html
0.x/en/api/booking/: index.html
0.x/en/api/booking/shared/calculator/: index.html
0.x/en/api/booking/shared/dto/: index.html
0.x/en/api/booking/shared/exceptions/: index.html
0.x/en/api/booking/shared/interfaces/: index.html
0.x/en/api/booking/shared/validators/: index.html
0.x/en/api/booking/slot_master/: index.html
0.x/en/api/booking/slot_master/api/: index.html
0.x/en/api/booking/slot_master/chain_finder/: index.html
0.x/en/api/booking/slot_master/dto/: index.html
0.x/en/api/booking/slot_master/modes/: index.html
0.x/en/api/booking/slot_master/scorer/: index.html
0.x/en/api/calendar/: index.html
0.x/en/api/calendar/engine/: index.html
0.x/en/architecture/: index.html
0.x/en/architecture/booking_engine/: index.html
0.x/evolution/changelog/: index.html
0.x/ru/architecture/: index.html
0.x/ru/architecture/booking_engine/: index.html
0.x/search/: search_index.json
docs/: index.md
docs/en/api/: index.md
docs/en/api/booking/: index.md
docs/en/api/booking/shared/: calculator.md  dto.md  exceptions.md  interfaces.md  validators.md
docs/en/api/booking/slot_master/: api.md  chain_finder.md  dto.md  index.md  modes.md  scorer.md
docs/en/api/calendar/: engine.md  index.md
docs/en/architecture/: README.md  booking_engine.md
docs/evolution/: changelog.md
docs/ru/architecture/: README.md  booking_engine.md
docs/stylesheets/: extra.css
scripts/: generate_api_docs.py
src/codex_services/: __init__.py
src/codex_services/booking/: __init__.py
src/codex_services/booking/_shared/: __init__.py  calculator.py  dto.py  exceptions.py  interfaces.py  validators.py
src/codex_services/booking/room/: __init__.py
src/codex_services/booking/slot_master/: __init__.py  api.py  chain_finder.py  dto.py  modes.py  scorer.py
src/codex_services/calendar/: __init__.py  engine.py
tests/: conftest.py
tests/integration/: conftest.py  test_booking_components_integration.py  test_calendar_integration.py  test_chain_finder_integration.py
tests/unit/: conftest.py  test_api.py  test_booking_validator.py  test_calendar_engine.py  test_chain_finder.py  test_dto.py  test_exceptions.py  test_scorer.py  test_slot_calculator.py
tools/dev/: check.py  generate_project_tree.py
